--- a/src/styles/_theme.css
+++ b/src/styles/_theme.css
@@ -172,7 +172,7 @@
      CUSTOM BREAKPOINTS
      ================================================================= */
   --breakpoint-3xl: 120rem;
-  --breakpoint-nav: 1165px;
+  --breakpoint-nav: 76.8125rem;
 
   /* =================================================================
      NAVIGATION HEIGHTS
